# EthosTerra

./: .coverage  .dockerignore  .env.example  .gitignore  .gitmodules  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  DEVELOPMENT_GUIDE.md  Dockerfile  Dockerfile.dev  Dockerfile.python  ETHOSTERRA-PYTHON-STATUS.md  GEMINI.md  INFORME.md  INFORME_COMPARACION_JAVA_PYTHON.md  Makefile  README.md  REFACTORING_PROGRESS.md  conftest.py  coverage.xml  docker-compose.coherence.yml  docker-compose.dev.yml  docker-compose.exp-1C-10A.yml  docker-compose.exp-2C-12A.yml  docker-compose.exp-5C-8A.yml  docker-compose.python.yml  docker-compose.test.yml  docker-compose.web.yml  docker-compose.yml  entrypoint.sh  futura-migracion.md  migration.RMI-MQTT.md  pyproject.toml  requirements.txt  sim_output.txt  skills-lock.json
besa-python/: pyproject.toml
besa-python/besa/bdi/: __init__.py  agent_bdi.py  bdi_machine.py  desire_pyramid.py  goal_bdi.py  goal_bdi_types.py  yaml_evaluator.py
besa-python/besa/ebdi/: __init__.py  emotional_event.py  emotional_model.py  semantic_dictionary.py
besa-python/besa/kernel/: __init__.py  adm.py  agent.py  event.py  guard.py  guard_error_handler.py  mbox.py  periodic_guard.py  poison_pill.py  rng.py  struct.py  tracing.py
besa-python/besa/llm/: __init__.py  llm_cache.py  (+2 more)
ethosterra-python/: pyproject.toml
ethosterra-python/ethosterra/: __init__.py  belief_repository.py  emotional_evaluator.py  episode_store.py  layer_module.py  plan_executor.py  radiation.py  run_treatment.py  simulation_clock.py  simulation_params.py  simulation_runner.py  start.py  world_config.py  world_loader.py
(+510 files in other folders)
