[project]
name = "besa-python"
version = "3.7.0"
requires-python = ">=3.13"
description = "BESA multi-agent BDI framework in Python 3.14t free-threaded"
license = {text = "LGPL-2.1"}

dependencies = [
    "pydantic>=2.9",
    "pyyaml>=6.0",
    "sortedcontainers>=2.4",
    "simpleeval>=1.0",
]

[project.optional-dependencies]
fuzzy   = ["scikit-fuzzy>=0.5", "numpy>=2.1"]
remote  = ["pika>=1.3"]
llm     = ["httpx>=0.27"]
dev     = ["pytest>=8.3", "mypy>=1.12", "ruff>=0.9", "pytest-cov>=5.0", "structlog>=24.0"]

[tool.uv]
python = "3.14t"

[tool.mypy]
python_version = "3.14"
strict = true

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "ANN"]

[tool.pytest.ini_options]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: tests que requieren >1s",
    "integration: tests que requieren RabbitMQ o llama-server",
    "llm: tests que requieren llama-server activo",
]
