[project]
name = "ethosterra-python"
version = "3.7.0"
requires-python = ">=3.13"
description = "EthosTerra multi-agent BDI social simulator - Python port"

dependencies = [
    "besa-python>=3.7.0",
    "pydantic>=2.9",
    "pyyaml>=6.0",
    "sortedcontainers>=2.4",
    "simpleeval>=1.0",
]

[project.optional-dependencies]
fuzzy   = ["scikit-fuzzy>=0.5", "numpy>=2.1"]
remote  = ["pika>=1.3"]
llm     = ["httpx>=0.27"]
dev     = ["pytest>=8.3", "mypy>=1.12", "ruff>=0.9", "pytest-cov>=5.0"]

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "standard"
